--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-input[type=text], select {
+input[type=text],
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -38,7 +39,6 @@ h1 {
   color: #81cdf0;
 }
 
-
 #books {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -46,14 +46,15 @@ h1 {
   margin: 100px auto;
 }
 
-#books td, #books th {
+#books td,
+#books th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#books tr:nth-child(even){background-color: #f2f2f2;}
+#books tr:nth-child(even) { background-color: #f2f2f2; }
 
-#books tr:hover {background-color: #ddd;}
+#books tr:hover { background-color: #ddd; }
 
 #books th {
   padding-top: 12px;
